--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ img {
 	border: 1px solid transparent;
 	padding: 10px 32px;
 
-	font-family: "Roboto", sans-serif;
+	font-family: inherit;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
@@ -736,14 +736,15 @@ img {
 /* MODAL */
 .backdrop {
 	position: fixed;
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 
 	display: flex;
 	justify-content: center;
+	align-items: center;
 
 	background-color: rgba(0, 0, 0, 0.2);
-	opacity: 1;
+	
 	top: 0;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -759,15 +760,13 @@ img {
 }
 
 .modal {
-	position: absolute;
+	position: relative;
 	min-width: 528px;
 	min-height: 581px;
-	left: 50%;
-	top: 50%;
-
+	
 	background-color: var(--white-background-color);
 	
-	transform: scale(1) translate(-50%, -50%);
+	transform: scale(1);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
