--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ img {
 	font-weight: 700;
 	font-size: 36px;
 	line-height: 1.17;
-	text-align: center;	
+	text-align: center;
 }
 
 .contact-icon {
@@ -317,7 +317,7 @@ img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
+
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
@@ -573,7 +573,7 @@ img {
 	font-size: 16px;
 	line-height: 1.25;
 	color: rgba(255, 255, 255, 0.6);
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-form-email:hover,
@@ -744,7 +744,7 @@ img {
 	align-items: center;
 
 	background-color: rgba(0, 0, 0, 0.2);
-	
+
 	top: 0;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -763,9 +763,9 @@ img {
 	position: relative;
 	min-width: 528px;
 	min-height: 581px;
-	
+
 	background-color: var(--white-background-color);
-	
+
 	transform: scale(1);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -779,9 +779,192 @@ img {
 
 	right: 8px;
 	top: 8px;
-	background: var(--white-background-color);
+	background: transparent;
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
 	border: 1px solid rgba(0, 0, 0, 0.1);
+
+	cursor: pointer;
+}
+
+.modal-icon {
+	fill: var(--black-logo-color);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover .modal-icon,
+.close-btn:focus .modal-icon {
+	fill: var(--accent-color);
+}
+
+/* modal-form */
+.form {
+	width: 528px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 40px;
+}
+
+.form-title {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+}
+
+.top-title {
+	margin-top: 12px;
+}
+
+.form-field {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+}
+
+.form-label,
+.comment-label {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	color: var(--secondary-text-color);
+	margin-bottom: 4px;
+}
+
+.form-input {
+	width: 100%;
+	margin: 0;
+	padding: 11px 42px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover,
+.form-input:focus {
+	outline: none;
+	border-color: var(--accent-color);
+}
+
+.input-icon {
+	position: absolute;
+	top: 50%;
+	left: 12px;
+
+	display: inline-block;
+
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover ~ .input-icon,
+.form-input:focus ~ .input-icon {
+	fill: var(--accent-color);
+}
+
+textarea {
+	resize: none;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	padding: 12px 16px;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	height: 120px;
+
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+textarea:hover,
+textarea:focus {
+	outline: none;
+	border-color: var(--accent-color);
+}
+
+.comment::placeholder {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	color: rgba(117, 117, 117, 0, 5);
+}
+
+.form-field-check {
+	padding-left: 12px;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+.icon-check {
+	display: inline-block;
+	width: 16px;
+	height: 15px;
+	border: 2px solid #212121;
+	border-radius: 2px;
+	margin-right: 7px;
+}
+
+.form-checkbox {
+	position: absolute;
+
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+
+	overflow: hidden;
+	border: 0;
+	clip: rect(0 0 0 0);
+}
+
+.form-checkbox:checked + .icon-check {
+	background-image: url(../images/check.svg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: var(--accent-color);
+	background-origin: border-box;
+	border-color: var(--accent-color);
+}
+
+.policy-label {
+	display: flex;
+	align-items: center;
+	font-size: 14px;
+	line-height: 1.71;
+	color: var(--secondary-text-color);
+}
+
+.policy-link {
+	margin-left: 4px;
+	color: var(--accent-color);
+}
+
+.form-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	margin: 0 auto;
+	padding: 10px 52px;
+
+	border: none;
+	border-radius: 4px;
+	font-family: inherit;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	cursor: pointer;
+
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	color: var(--white-text-color);
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover,
+.form-btn:focus {
+	background-color: #188ce8;
 }
