--- a/css/styles.css
+++ b/css/styles.css
@@ -896,15 +896,7 @@ textarea:focus {
 	margin-bottom: 30px;
 }
 
-.icon-check {
-	display: inline-block;
-	width: 16px;
-	height: 15px;
-	border: 2px solid #212121;
-	border-radius: 2px;
-	margin-right: 7px;
-}
-
+/* удаляю скрытый чек */
 .form-checkbox {
 	position: absolute;
 
@@ -918,13 +910,15 @@ textarea:focus {
 	clip: rect(0 0 0 0);
 }
 
-.form-checkbox:checked + .icon-check {
-	background-image: url(../images/check.svg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-color: var(--accent-color);
-	background-origin: border-box;
-	border-color: var(--accent-color);
+.icon-check {
+	margin-right: 7px;
+}
+.icon-agree {
+	opacity: 0;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-checkbox:checked + .icon-check .icon-agree {
+	opacity: 1;
 }
 
 .policy-label {
